# saltup

./: .gitignore  README.md  clean.sh  makePackage.sh  project_requirements.txt  pyproject.toml
examples/notebooks/: example_classification_keras.ipynb  example_classification_torch.ipynb  saltup_classification_keras.ipynb  saltup_classification_torch.ipynb
examples/notebooks/training_outputs/train_09-07-2025_15-36-53/: classification_evaluations.txt
examples/notebooks/training_outputs/train_09-07-2025_15-43-27/: classification_evaluations.txt  options.txt
examples/notebooks/training_outputs/train_09-07-2025_15-49-34/: classification_evaluations.txt
examples/notebooks/training_outputs/train_09-07-2025_15-58-03/: classification_evaluations.txt  options.txt
examples/notebooks/training_outputs/train_09-07-2025_16-04-33/: classification_evaluations.txt  options.txt
examples/notebooks/training_outputs/train_09-07-2025_16-08-43/: classification_evaluations.txt
examples/notebooks/training_outputs/train_09-07-2025_16-16-13/: classification_evaluations.txt
examples/notebooks/training_outputs/train_09-07-2025_16-18-25/: classification_evaluations.txt  options.txt
examples/notebooks/training_outputs/train_09-07-2025_16-19-52/: classification_evaluations.txt
examples/notebooks/training_outputs/train_09-07-2025_16-20-41/: classification_evaluations.txt
examples/notebooks/training_outputs/train_09-07-2025_16-51-38/: classification_evaluations.txt
examples/notebooks/training_outputs/train_09-07-2025_17-20-40/: classification_evaluations.txt
examples/notebooks/training_outputs/train_09-07-2025_17-24-29/: classification_evaluations.txt
examples/notebooks/training_outputs/train_09-07-2025_17-28-19/: classification_evaluations.txt
examples/notebooks/training_outputs/train_09-07-2025_17-31-45/: classification_evaluations.txt
saltup/: saltup_env.py
saltup/ai/: nn_manager.py  nn_model.py
saltup/ai/base_dataformat/: base_datagen.py  base_dataloader.py  base_dataset.py
saltup/ai/classification/: datagenerator.py  dataloader.py  evaluate.py
saltup/ai/classification/datagenerator/: classification_datagen.py
saltup/ai/keras_utils/: keras_to_onnx.py  keras_to_tflite_quantization.py
saltup/ai/quantization/: __init__.py  quantization.py  quantization_factory.py
saltup/ai/training/: app_callbacks.py  callbacks.py  train.py
saltup/scripts/: count_classes.py  simlink_per_classes.py  yolov8_inference_onnx_2.py
saltup/tools/: add_tools_to_path.sh  consolidate_files.py  replace_yolo_label_class.py  saltup_info.py  split_yolo_dataset.py  unify_files.py  yolo_count_classes.py  yolo_inference.py  yolo_s3_inference.py  yolo_simlink_per_classes.py  yolo_video.py
saltup/tools/yolo_darknet/: count_classes.py
saltup/utils/: configure_logging.py  jupyter_notebook.py  misc.py  mlflow.py
test/: conftest.py  test_saltup_env.py
test/ai/classification/: test_datagenerator.py  test_dataloader.py
test/ai/keras/: test_onnx_keras.py
test/ai/keras_utils/: test_keras_to_tflite_quantization.py  test_onnx_keras.py
test/ai/nn_manager/: test_nn_manager.py
test/ai/nn_model/: test_nn_model.py
test/ai/quantization/: test_quantization.py
test/ai/training/: test_train.py  test_training_callbacks.py
test/results/: damo_output.npy  supergrad_output.npy  ultralytics_ouput.npy
test/results/label_examples/: label_4.txt  label_5.txt  label_6.txt  label_7.txt  label_8.txt
test/test_packages/: test_ai.py  test_ai_object_detection_dataset.py  test_preprocessing.py  test_utils_updated.py
test/tests_data/configs/: anchor_based_datagen.yaml
test/tests_data/label_examples/: label_1.txt  label_10.txt  label_2.txt  label_3.txt  label_9.txt
test/tests_data/results/: anchorsBased_output.npy  result_process_with_overrides_2.npz
test/tests_data/saltup_env/: demo_saltup_env.py  invalid.json  keras_compile_args.json  keras_fit_args.json  pytorch_args.json
test/utils/: test_utils.py
test/utils/data/: test_data_image.py
(+144 files in other folders)
