[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saltup"
version = "0.5"
description = "add flavor to your AI projects"
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name = "Marco Garzola" },
    { name = "Francesco Sonnessa" },
    { name = "Marc Randriatsimiovalaza" }
]
keywords = ["AI", "deep learning", "computer vision", "YOLO"]
license = { text = "MIT" }
dependencies = [
    "numpy",
    "cmsisdsp",
    "pillow",
    "opencv-python",
    "boto3",
    "onnx",
    "onnxruntime-gpu",
    "tensorflow",
    "tf_keras",
    "torch",
    "torchvision",
    "torchaudio"
]

[project.scripts]
saltup_yolo_count_classes = "saltup.tools.yolo_count_classes:main"
saltup_yolo_simlink_per_classes = "saltup.tools.yolo_simlink_per_classes:main"
saltup_yolo_image_inference = "saltup.tools.yolo_inference:main"
saltup_yolo_video_inference = "saltup.tools.yolo_video:main"
saltup_yolo_s3_inference = "saltup.tools.yolo_s3_inference:main"

