[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saltup"
version = "0.8.8"
description = "add flavor to your AI projects"
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name = "Marco Garzola" },
    { name = "Francesco Sonnessa" },
    { name = "Marc Randriatsimiovalaza" }
]
keywords = ["AI", "deep learning", "computer vision", "YOLO"]
license = { text = "MIT" }
dependencies = [
    "cmsisdsp",
    "pillow",
    "matplotlib",
    "seaborn",
    "pandas",
    "scipy",
    "pyarrow",
    "fastparquet",
    "opencv-python",
    "boto3",
    "tf2onnx==1.16.1",
    "onnx",
    "tensorflow==2.18.0",
    "keras==3.8.0",
    "onnx2torch",
    "torch",
    "torchvision",
    "torchaudio",
    "onnxruntime-gpu",
    "albumentations",
    "tqdm",
    "toml",
    "dotmap",
    "IPython",
    "ipykernel",
    "nbformat",
    "paho-mqtt",
    "mlflow",
    "librosa",
    "soundfile",
    "pytest"
]

[project.scripts]
saltup_yolo_count_classes = "saltup.tools.yolo_count_classes:main"
saltup_yolo_simlink_per_classes = "saltup.tools.yolo_simlink_per_classes:main"
saltup_yolo_image_inference = "saltup.tools.yolo_inference:main"
saltup_yolo_video_inference = "saltup.tools.yolo_video:main"
saltup_yolo_s3_inference = "saltup.tools.yolo_s3_inference:main"
saltup_info = "saltup.tools.saltup_info:main"
saltup_keras2onnx = "saltup.tools.keras2onnx:main"
saltup_onnx_quantization = "saltup.tools.onnx_quantization:main"

[tool.setuptools.packages.find]
include = ["saltup*"]
exclude = ["mlruns*"]